--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,17 +1,34 @@
 RewriteEngine On
 
-# Serve existing files/directories as-is (no rewrites)
-RewriteCond %{REQUEST_FILENAME} -f [OR]
-RewriteCond %{REQUEST_FILENAME} -d
-RewriteRule . - [L]
+# Handle Angular and React Router
 
-# Add trailing slash for clean URLs on non-file requests
-RewriteCond %{REQUEST_URI} !\.[a-zA-Z0-9]+$
-RewriteCond %{REQUEST_URI} !/$
-RewriteRule ^(.+)$ $1/ [L,R=301]
+# If an existing asset or directory is requested go to it as it is
 
-# Map clean URLs to static HTML
-RewriteRule ^(.+)/$ $1.html [NC,L]
+RewriteRule ^ - [L]
 
-# Custom 404
-ErrorDocument 404 /404.html
+# Handle client-side routing - redirect all non-file requests to index.html
+
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule . /index.html [L]
+
+# Optional: Set cache headers for static assets
+
+<IfModule mod_expires.c>
+    ExpiresActive on
+    ExpiresByType text/css "access plus 1 year"
+    ExpiresByType application/javascript "access plus 1 year"
+    ExpiresByType image/png "access plus 1 year"
+    ExpiresByType image/jpg "access plus 1 year"
+    ExpiresByType image/jpeg "access plus 1 year"
+    ExpiresByType image/gif "access plus 1 year"
+    ExpiresByType image/svg+xml "access plus 1 year"
+</IfModule>
+
+# Security headers
+
+<IfModule mod_headers.c>
+    Header always set X-Content-Type-Options nosniff
+    Header always set X-Frame-Options DENY
+    Header always set X-XSS-Protection "1; mode=block"
+</IfModule>
